tests/Rules/Media/Fixtures/invalid/audio_autoplay_no_controls.html.twig
{# 1 errors #}
<audio autoplay src="song.mp3"></audio>
